UTC time stamps in Network Monitor capture files aren't supported
This issue was migrated from bug 10190 in our old bug tracker.
Original bug information:
Reporter: Ken Hollis
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: All
Version: unspecified
Attachments:
WS_test.cap: Example .cap file generated from message Analyzer
: Image of the correct timestamps
: Netmon Capture file format
: Capture file header format
: Header extend xxx field info
: Frame layout format showing both time fields